--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-magnus": "^1.0.63"
+    "react-native-magnus": "^1.0.63",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
